--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,8 +52,16 @@ dependencies {
     // circleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    // Country Code Picker
-   // implementation 'com.hbb20:ccp:2.3.1'
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+
+    //loader
+    implementation 'com.github.Marvel999:Android-Loading-Animation:1.0.0'
+
+
+
 
 
 }
